# better-word-slack

./: .env.example  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: ci.yaml
src/: better_word.py  conduit.py  config.py  manager.py  prompts.py
src/llm_provider/: base.py  gemini.py  litellm.py
tests/: test_better_word.py
